--- a/index.html
+++ b/index.html
@@ -152,10 +152,49 @@
                         </div>    
                     </div>
 
-                    <div class="row dflex">
+                    <h2>Creato per Simone Zampieri</h2>
 
-                        <h2>Creato per Simone Zampieri</h2>
-                    
+                    <div class="row dflex">
+                        <div class="card">
+                            <div class="album">
+                                <img src="./img/radar.jpeg" alt="Metal">
+                            </div>
+                            <div class="didascalia">
+                                <h4>Release Radar</h4>
+                            </div>
+                        </div>
+                        
+                        <div class="card">
+                            <div class="album">
+                                <img src="./img/mixdaily.jpeg" alt="Metal">
+                            </div>
+                            <div class="didascalia">
+                                <h4>Daily Mix 1</h4>
+                            </div>
+                        </div>       
+                    </div>
+
+                    <h2>Ascolti più popolari</h2>
+
+
+                    <div class="row dflex">
+                        <div class="card">
+                            <div class="album">
+                                <img class="tonda" src="./img/einaudi.jpeg" alt="Metal">
+                            </div>
+                            <div class="didascalia">
+                                <h4>Ludovico Einaudi</h4>
+                            </div>
+                        </div> 
+
+                        <div class="card">
+                            <div class="album">
+                                <img class="tonda" src="./img/youg.jpeg" alt="Metal">
+                            </div>
+                            <div class="didascalia">
+                                <h4>Lana Del Rey</h4>
+                            </div>
+                        </div> 
                     </div>
     </main>
     <footer class="bottom"></footer>
