--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <li><img src="./img/libreria.svg" alt="Libreria">La tua libreria</li>
                         </ul>
                        </nav>
-                       <p><i class="fa-solid fa-plus"></i>Playlist</p>
+                       <p class="plus"><i class="fa-solid fa-plus"></i>Crea Playlist</p>
                        <nav class="playlist">
                         <ul>
                             <li>Nome Playlist</li>
@@ -197,6 +197,48 @@
                         </div> 
                     </div>
     </main>
-    <footer class="bottom"></footer>
+
+    <footer class="dflex space">
+
+            <div class="brano dflex">
+                <div class="albumcover">
+                    <img src="./img/sinister.jpeg" alt="cover">
+                </div>
+                <div class="descrizione">
+                    <span>Sinister</span>
+                    <p>Brano nome</p>
+                </div>
+                <div class="folder">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+
+            <div class="player">
+                <div class="buttons">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div class="progressbar">
+                    <div></div>                    
+                </div>
+            </div>
+
+            <div class="volume dflex center">
+                <div class="buttons">
+                    <i class="fa-solid fa-list"></i>
+                    <i class="fa-solid fa-display"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                </div>
+                <div class="volumebar">
+                    <div></div>
+                </div>
+            </div>
+        
+       
+    </footer>
 </body>
 </html>
