--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                             <li><img src="./img/libreria.svg" alt="Libreria">La tua libreria</li>
                         </ul>
                        </nav>
-                       <p class="plus"><i class="fa-solid fa-plus"></i>Crea Playlist</p>
+                       <div class="playlist-box">
+                        <p class="plus"><i class="fa-solid fa-plus"></i>Crea Playlist</p>
                        <nav class="playlist">
                         <ul>
                             <li>Nome Playlist</li>
@@ -42,6 +43,8 @@
                             <li>Nome Playlist</li>
                         </ul>
                        </nav>
+                       </div>
+                       
                 </div>
                
                 <div class="installa">
