--- a/index.html
+++ b/index.html
@@ -221,10 +221,11 @@
                 <div class="buttons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play"></i>
+                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
+
                 <div class="progressbar">
                     <div class="mediumbar">
                         <div class="puntino">
@@ -232,7 +233,8 @@
                         </div>
                         
                     </div>                    
-                </div>    
+                </div>
+                    
             </div>
 
             <div class="volume dflex center">
