aggiunte ultime rifiniture

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                        </div>
                        <nav id="icons">
                         <ul>
-                            <li><img src="./img/home.svg" alt="Home"> Home</li>
-                            <li><img src="./img/search.svg" alt="Lente">Cerca</li>
-                            <li><img src="./img/libreria.svg" alt="Libreria">La tua libreria</li>
+                            <li>
+                                <div class="green"><img src="./img/home.svg" alt="Home"><span>Home</span></div></li>
+                            <li><img src="./img/search.svg" alt="Lente"><span>Cerca</span></li>
+                            <li><img src="./img/libreria.svg" alt="Libreria"><span>La tua libreria</span></li>
                         </ul>
                        </nav>
                        <div class="playlist-box">
